--- a/404.html
+++ b/404.html
@@ -2,25 +2,40 @@
 permalink: /404.html
 layout: default
 ---
-
-<style type="text/css" media="screen">
-    .container {
-        margin: 10px auto;
-        max-width: 600px;
-        text-align: center;
-    }
-
-    h1 {
-        margin: 30px 0;
-        font-size: 4em;
-        line-height: 1;
-        letter-spacing: -1px;
-    }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<main class="main" id="top">
+    <div class="container-fluid" data-layout="container">
+        <script>
+            var isFluid = JSON.parse(localStorage.getItem('isFluid'));
+            if (isFluid) {
+                var container = document.querySelector('[data-layout]');
+                container.classList.remove('container');
+                container.classList.add('container-fluid');
+            }
+        </script>
+        <div class="row flex-center min-vh-100 py-6 text-center">
+            <div class="col-sm-10 col-md-8 col-lg-6 col-xxl-5">
+                <a class="d-flex flex-center mb-4"
+                                                                  href="/index.html"><img class="me-2"
+                                                                                               src="https://static.ifinal.io/favicons/favicon.png"
+                                                                                               alt="" width="58"><span
+                    class="font-sans-serif fw-bolder fs-5 d-inline-block">ifinal</span></a>
+                <div class="card">
+                    <div class="card-body p-4 p-sm-5">
+                        <div class="fw-black lh-1 text-300 fs-error">404</div>
+                        <p class="lead mt-4 text-800 font-sans-serif fw-semi-bold w-md-75 w-xl-100 mx-auto">您访问的页面不存在！</p>
+                        <hr>
+                        <p>请确认您访问的页面地址是正确的。</p>
+                        <a
+                            class="btn btn-primary btn-sm mt-3" href="/index.html">
+                        <svg class="svg-inline--fa fa-home fa-w-18 me-2" aria-hidden="true" focusable="false"
+                             data-prefix="fas" data-icon="home" role="img" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 576 512" data-fa-i2svg="">
+                            <path fill="currentColor"
+                                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"></path>
+                        </svg>返回首页</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
