--- a/blogs/index.html
+++ b/blogs/index.html
@@ -27,7 +27,7 @@ formatterOn: "@formatter:on"
                 {% for post in paginator.posts %}
                 <div class="card mb-3">
                     <a href="{{ post.url }}">
-                        <img class="card-img-top" src="{{ post.banner }}" alt="">
+                        <img class="card-img-top" src="{{ post.banner }}?w=1880&h=400&fit=crop&url={{post.url}}" alt="">
                         <div class="card-body">
                             <div class="row justify-content-between align-items-center">
                                 <div class="col">
