--- a/index.html
+++ b/index.html
@@ -33,4 +33,61 @@ formatterOn: "@formatter:on"
     </div><!-- end of .container-->
 </section>
 
+<section class="section content">
+    <div class="container">
+        <div class="row g-3 mb-3">
+            <div class="col-sm-6 col-md-4">
+                <div class="card overflow-hidden" style="min-width: 12rem">
+                    <div class="bg-holder bg-card"
+                         style="background-image:url(https://prium.github.io/falcon/v3.15.0/assets/img/icons/spot-illustrations/corner-1.png);"></div>
+                    <!--/.bg-holder-->
+                    <div class="card-body position-relative">
+                        <h6>Blogs</h6>
+                        <div class="display-4 fs-4 mb-2 fw-normal font-sans-serif text-warning"
+                             data-countup="{&quot;endValue&quot;:58.386,&quot;decimalPlaces&quot;:2,&quot;suffix&quot;:&quot;k&quot;}">
+                            {{ site.posts.size }}
+                        </div>
+                        <a class="fw-semi-bold fs--1 text-nowrap" href="/blogs">See all
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="card overflow-hidden" style="min-width: 12rem">
+                    <div class="bg-holder bg-card"
+                         style="background-image:url(https://prium.github.io/falcon/v3.15.0/assets/img/icons/spot-illustrations/corner-1.png);"></div>
+                    <!--/.bg-holder-->
+                    <div class="card-body position-relative">
+                        <h6>Orders<span class="badge badge-subtle-info rounded-pill ms-2">0.0%</span></h6>
+                        <div class="display-4 fs-4 mb-2 fw-normal font-sans-serif text-info"
+                             data-countup="{&quot;endValue&quot;:23.434,&quot;decimalPlaces&quot;:2,&quot;suffix&quot;:&quot;k&quot;}">
+                            23.43k
+                        </div>
+                        <a class="fw-semi-bold fs--1 text-nowrap" href="app/e-commerce/orders/order-list.html">All
+                            orders
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card overflow-hidden" style="min-width: 12rem">
+                    <div class="bg-holder bg-card"
+                         style="background-image:url(https://prium.github.io/falcon/v3.15.0/assets/img/icons/spot-illustrations/corner-1.png);"></div>
+                    <!--/.bg-holder-->
+                    <div class="card-body position-relative">
+                        <h6>Revenue<span class="badge badge-subtle-success rounded-pill ms-2">9.54%</span></h6>
+                        <div class="display-4 fs-4 mb-2 fw-normal font-sans-serif"
+                             data-countup="{&quot;endValue&quot;:43594,&quot;prefix&quot;:&quot;$&quot;}">$43,594
+                        </div>
+                        <a class="fw-semi-bold fs--1 text-nowrap" href="index.html">Statistics
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+
 
