--- a/blogs.html
+++ b/blogs.html
@@ -11,12 +11,10 @@ typed:
   - write by markdown.
 tags: []
 <!--banner: https://images.unsplash.com/photo-1501791187590-9ef2612ba1eb-->
-brand: Blog
-sidebar: false
-class: index-page
-app: home
 date: 2021-04-30 16:04:20 +800
 version: 1.0
+pagination:
+  enabled: true
 formatterOn: "@formatter:on"
 ---
 
