--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@ formatterOn: "@formatter:on"
                 <div class="card overflow-hidden" style="min-width: 12rem">
                     <div class="bg-holder bg-card"
                          style="background-image:url(https://prium.github.io/falcon/v3.15.0/assets/img/icons/spot-illustrations/corner-1.png);"></div>
-                    <!--/.bg-holder-->
                     <div class="card-body position-relative">
                         <h6>Blogs</h6>
                         <div class="display-4 fs-4 mb-2 fw-normal font-sans-serif text-warning"
@@ -55,8 +54,7 @@ formatterOn: "@formatter:on"
             <div class="col-sm-6 col-md-4">
                 <div class="card overflow-hidden" style="min-width: 12rem">
                     <div class="bg-holder bg-card"
-                         style="background-image:url(https://prium.github.io/falcon/v3.15.0/assets/img/icons/spot-illustrations/corner-1.png);"></div>
-                    <!--/.bg-holder-->
+                         style="background-image:url(https://prium.github.io/falcon/v3.15.0/assets/img/icons/spot-illustrations/corner-2.png);"></div>
                     <div class="card-body position-relative">
                         <h6>Collections</h6>
                         <div class="display-4 fs-4 mb-2 fw-normal font-sans-serif text-info"
@@ -72,14 +70,13 @@ formatterOn: "@formatter:on"
             <div class="col-md-4">
                 <div class="card overflow-hidden" style="min-width: 12rem">
                     <div class="bg-holder bg-card"
-                         style="background-image:url(https://prium.github.io/falcon/v3.15.0/assets/img/icons/spot-illustrations/corner-1.png);"></div>
-                    <!--/.bg-holder-->
+                         style="background-image:url(https://prium.github.io/falcon/v3.15.0/assets/img/icons/spot-illustrations/corner-3.png);"></div>
                     <div class="card-body position-relative">
-                        <h6>Revenue<span class="badge badge-subtle-success rounded-pill ms-2">9.54%</span></h6>
+                        <h6>Articles</h6>
                         <div class="display-4 fs-4 mb-2 fw-normal font-sans-serif"
-                             data-countup="{&quot;endValue&quot;:43594,&quot;prefix&quot;:&quot;$&quot;}">$43,594
+                             data-countup="{&quot;endValue&quot;:{{ site.documents.size }}}">
                         </div>
-                        <a class="fw-semi-bold fs--1 text-nowrap" href="index.html">Statistics
+                        <a class="fw-semi-bold fs--1 text-nowrap" href="/articles/all/index.html">See All
                         </a>
                     </div>
                 </div>
