--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ formatterOn: "@formatter:on"
     </div><!-- end of .container-->
 </section>
 
-<section class="section content">
+<section class="section py-3">
     <div class="container">
         <div class="row g-3 mb-3">
             <div class="col-sm-6 col-md-4">
@@ -83,7 +83,6 @@ formatterOn: "@formatter:on"
             </div>
         </div>
     </div>
-
 </section>
 
 
