--- a/blogs/index.html
+++ b/blogs/index.html
@@ -18,56 +18,9 @@ pagination:
 formatterOn: "@formatter:on"
 ---
 
-<section class="py-3 shadow-sm">
-    <div class="container">
-        <div class="container">
-            <div class="col-md-12">
-                {% for post in paginator.posts %}
-                <div class="card mb-3">
-                    <a href="{{ post.url }}">
-                        <img class="card-img-top" style="height: 400px; object-fit: cover"
-                             src="{{ post.banner }}?h=400&fit=crop&url={{post.url}}"
-                             alt="">
-                        <div class="card-body">
-                            <div class="row justify-content-between align-items-center">
-                                <div class="col">
-                                    <div class="d-flex">
-                                        <div class="calendar me-2">
-                                            <span class="calendar-month">{{ post.date | date: "%b" }}</span>
-                                            <span class="calendar-day">{{ post.date | date: "%d" }}</span>
-                                        </div>
-                                        <div class="flex-1 fs--1">
-                                            <h5 class="fs-0">{{ post.title }}</h5>
-                                            <p class="mb-0"><a href="#!">{{ site.data.authors[post.author].name }}</a></p>
-                                            <span class="fs-0 text-warning fw-semi-bold">{{ post.date | date: "%Y" }}</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                {% endfor %}
-                <div class="pagination">
-                    {% if paginator.previous_page %}
-                    <a href="{{ paginator.previous_page_path }}" class="previous">
-                        Previous
-                    </a>
-                    {% else %}
-                    <span class="previous">Previous</span>
-                    {% endif %}
-                    <span class="page_number ">
-    Page: {{ paginator.page }} of {{ paginator.total_pages }}
-  </span>
-                    {% if paginator.next_page %}
-                    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-                    {% else %}
-                    <span class="next ">Next</span>
-                    {% endif %}
-                </div>
+<!-- 定义一个变更posts -->
+{% assign posts = paginator.posts %}
 
-            </div>
-        </div>
-    </div>
-</section>
+{% include posts-paginator.html %}
+
 
